--- a/All Pages/HomePage.html
+++ b/All Pages/HomePage.html
@@ -67,6 +67,11 @@
 
     </div>
 
+
+    <div id="menuBox">
+
+    </div>
+
     <div id="navBar2">
         <div id="first">
             <div id="holiday">Holiday 2021</div>
