all popUp done up to searched

--- a/All Pages/HomePage.html
+++ b/All Pages/HomePage.html
@@ -25,7 +25,7 @@
         <div>
             <div id="menuDiv">
                 <div class="material-icons-outlined" style="color: white; font-size: 2.2vw; font-weight: 200; margin:  8% 0 0 10%;">
-                    menu
+                   <span id="change">menu</span> 
                 </div>
                 <div id="menuText">Menu</div>
             </div>
@@ -71,6 +71,9 @@
     <div id="menuBox">
 
     </div>
+    <div id="searchRes">
+
+    </div>
 
     <div id="navBar2">
         <div id="first">
@@ -95,11 +98,17 @@
                 </div>
                 <div>Recently Viewed ⌵</div>
                 <div>Order Status ⌵</div>
-                <div>Saved Items ⌵</div>
+                <div id="saveI">Saved Items ⌵</div>
             </div>
            
         </div>
     </div>
+
+    <div id="holidayPopUp"></div>
+    <div id="accountPopUp"></div>
+    <div id="savedItemsPopUp"></div>
+
+    <!-- navBar// -->
     
 </body>
 </html>
