--- a/All Pages/HomePage.html
+++ b/All Pages/HomePage.html
@@ -110,6 +110,184 @@
 
     <!-- navBar// -->
     
+
+    <div id="flashBox">
+
+        <div id="insFlash">
+            <div id="bellImg">
+                <div id="bellImgDiv">
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/GL-65734-icon-bf-211120-570f919b-cdc3-43b1-916c-6a2a12e66c5b.png" alt="" class="imgbell">
+                </div>
+
+            </div>
+            <div id="flashText">
+                <div id="redBox">
+                    Ends Sunday.
+                </div>
+                <div id="hours">
+                    72-Hour
+                </div>
+                <div id="flashSText">
+                    Flash Sale
+                </div>
+                <div id="readyT">
+                    Ready in one hour with Store or Curbside Pickup.
+                </div>
+            </div>
+            <div id="shopNow">
+                <div id="shopNDiv">
+                    <div id="shopDST">
+                        Limited quantities. No rainchecks. See
+                      <span id="hol"> Holiday FAQs.</span>  
+                    </div>
+
+                    <div id="shopBtn">
+                        Shop Now
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="catText">
+            Shop these deals and more by category
+        </div>
+
+    </div>
+
+    <div id="allCate">
+        <div>
+            <div >
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-tv-211210-380420dc-a1ec-49b2-a89b-763622790586.jpg;maxWidth=220" alt="" class="img">
+            </div>
+            <div>TVs & Projectors</div>
+        </div>
+        <div>
+            <div>
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-lt-211210-b9213f3b-5852-461b-ba4f-ac9f9830899c.jpg;maxWidth=220"
+                    alt="" class="img">
+            </div>
+            <div>Laptops & Computers</div>
+        </div>
+        <div>
+            <div>
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-vg-211210-8cf31f6f-e419-49fb-8f2d-4c00edf81e44.jpg;maxWidth=220" alt="" class="img">
+            </div>
+            <div>Video Games, Consoles & VR</div>
+        </div>
+        <div>
+            <div>
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-apple-211210-4a457f1c-5fdf-464d-a205-bcbe8073352a.jpg;maxWidth=220" alt="" class="img">
+            </div>
+            <div>Apple</div>
+        </div>
+        <div>
+            <div>
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-cp-211210-858c27b5-8933-4942-b15a-712e992d2175.jpg;maxWidth=220" alt="" class="img">
+            </div>
+            <div>Cell Phones</div>
+        </div>
+        <div>
+            <div>
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-mapp-211210-4297c2d2-34eb-48b3-9ac3-e566540a3c2f.jpg;maxWidth=220" alt="" class="img">
+            </div>
+            <div>Major Appliances</div>
+        </div>
+        <div>
+            <div>
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-tl-211210-670ffd26-06db-4e10-85e1-9ea08cf49d9e.jpg;maxWidth=220" alt="" class="img">
+            </div>
+            <div>Tablets & E-Readers</div>
+        </div>
+        <div>
+            <div>
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-spkr-211210-9bb5c5d6-dd7b-40b5-b460-ccc17781b12f.jpg;maxWidth=220" alt="" class="img">
+            </div>
+            <div>Sound Bars, Speakers & Streaming Devices</div>
+        </div>
+        <div>
+            <div>
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-hp-211210-977b38c5-7d1b-46e2-916f-5efe74c7bb29.jpg;maxWidth=220" alt="" class="img">
+            </div>
+            <div>Headphones</div>
+        </div>
+        <div>
+            <div>
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-pcg-211210-4f864822-3f6e-4a65-9e63-3ad2a7564de5.jpg;maxWidth=220" alt="" class="img">
+            </div>
+            <div>PC Gaming</div>
+        </div>
+        <div>
+            <div>
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-flr-211210-6fd08e4a-b88c-4cb1-9336-6c0f41664da6.jpg;maxWidth=220" alt="" class="img">
+            </div>
+            <div>Small Appliances, Floor Care & Home Air Quality</div>
+        </div>
+        <div>
+            <div>
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-wear-211210-3db5fa85-8ef1-4526-ad06-0b5a3eed7b4c.jpg;maxWidth=220" alt="" class="img">
+            </div>
+            <div>Wearable Technology</div>
+        </div>
+        <div>
+            <div>
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-sh-211210-efa22894-85b4-4386-b230-258c52d51a7a.jpg;maxWidth=220" alt="" class="img">
+            </div>
+            <div>Smart Home & Networking</div>
+        </div>
+        <div>
+            <div>
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-ccd-211210-4a116c1e-2801-42c1-86b2-af706a0dd447.jpg;maxWidth=220" alt="" class="img">
+            </div>
+            <div>Cameras, Camcorders & Drones</div>
+        </div>
+        <div>
+            <div>
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-toy-211210-1b8dab92-bee5-4c21-ae44-58569aafebee.jpg;maxWidth=220" alt="" class="img">
+            </div>
+            <div>Toys, Games, Collectibles & Movies</div>
+        </div>
+        <div>
+            <div>
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-piho-211210-6a1b48dc-b331-45b2-b98f-93d2fb432fa5.jpg;maxWidth=220" alt="" class="img">
+            </div>
+            <div>Printers, Ink & Home Office</div>
+        </div>
+        <div>
+            <div>
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-hfc-211210-d241bbb7-9209-4bf5-86d3-c3c40bd4dfc2.jpg;maxWidth=220" alt="" class="img">
+            </div>
+            <div>Health, Fitness & Personal Care</div>
+        </div>
+        <div>
+            <div>
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-el-211210-74cf3d31-321d-47b0-9526-a523ce940327.jpg;maxWidth=220" alt="" class="img">
+            </div>
+            <div>Electric Transportation</div>
+        </div>
+    </div>
+
+
+    <div id="dealDay">
+        <div >
+            <div id="dD">
+                Shop Now
+            </div>
+        </div>
+        <div>
+            <div id="gI">
+                Shop Now
+            </div>
+        </div>
+    </div>
+
+
+
+    <div id="emptyBox">
+
+    </div>
+
+
+
 </body>
 </html>
 <script src="/JS Files/HomePage.js"></script>
