working on slider

--- a/All Pages/HomePage.html
+++ b/All Pages/HomePage.html
@@ -281,6 +281,102 @@
     </div>
 
 
+    <div id="fOffer">
+        <div id="offText">Our featured offers</div>
+
+        <div id="allProd">
+            <div>
+                <div>
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/Gallery/pol_macbook-pro-6366564-MMT-234837-0210-der-133916.jpg;maxHeight=504;maxWidth=740" class="imgp">
+                </div>
+                <div>
+                    MacBook <br>
+                    Save up to $500 on select models.
+                </div>
+                <div>
+                    Minimum savings is $50.
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/pol_MMT-481846_der-cabbecec-e00c-4a89-abce-3d5f538b3acf.jpg;maxHeight=504;maxWidth=740"
+                        class="imgp">
+                </div>
+                <div>
+                    Appliance holiday savings.
+                </div>
+                <div>
+                    Make the season sparkle with deals on new appliances, large and small.
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/pol-mmt449613-samsung_DER-1d99abc3-5eab-4522-a2c8-4b521e60f387.jpg;maxHeight=504;maxWidth=740" class="imgp">
+                </div>
+                <div>
+                    LG, Samsung and Sony TVs.
+                </div>
+                <div>
+                        Find a variety of sizes, features and technologies from these popular brands.
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/sol-89779-15-days-gaming-pol-cc358aeb-3556-4765-9b96-afa4eb6ebed1.jpg;maxHeight=408;maxWidth=600" class="imgp1">
+                </div>
+                <div>
+                    15 days of gaming.
+                </div>
+                <div>
+                    Find fantastic deals on video games for all platforms, plus gaming accessories. Each item will be at a great price for
+                    one day only.
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/mmt-476276-airpods-fam-pol_der-fa01d77c-9f13-4300-ac7a-e4bc349e76fa.jpg;maxHeight=408;maxWidth=600" class="imgp1">
+                </div>
+                <div>
+                AirPods
+                Magic runs in the family.
+                </div>
+                
+            </div>
+            <div>
+                <div>
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/GL66128_COPE-der-TopDealsEntryPoints-9bb77364-9934-4fce-a921-1f30f0880aae.jpg;maxHeight=408;maxWidth=600" class="imgp1">
+                </div>
+                <div>
+                    Top Deals
+                </div>
+                <div>
+                    Today’s featured deals and top tech.
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="sliderDiv">
+        <div>
+            You may also like <span id="fnt">(13 items)</span>
+        </div>
+        <div id="products">
+            <div>
+                <span class="material-icons-outlined" id="leftA" >
+                    arrow_back_ios
+                </span>
+            </div>
+            <div id="aProducts">
+
+            </div>
+            
+            <div>
+                <span class="material-icons-outlined" id="rightA">
+                    arrow_forward_ios
+                </span>
+            </div>
+        </div>
+    </div>
 
     <div id="emptyBox">
 
