Created dataBase & and SignIn, SignUp Pages

--- a/All Pages/HomePage.html
+++ b/All Pages/HomePage.html
@@ -44,6 +44,7 @@
             </div>
         </div>
         <div id="aiea">
+            
             <div>
                 <span class="material-icons-outlined" style="color: white; margin:5% 0 0 91%; font-size: 2.1vw;">
                 holiday_village
@@ -201,9 +202,9 @@
     </div>
 
     <div id="allCate">
-        <div>
+        <div id="TV">
             <div >
-                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-tv-211210-380420dc-a1ec-49b2-a89b-763622790586.jpg;maxWidth=220" alt="" class="img">
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-tv-211210-380420dc-a1ec-49b2-a89b-763622790586.jpg;maxWidth=220" alt="" class="img" >
             </div>
             <div>TVs & Projectors</div>
         </div>
