created Product Page

--- a/All Pages/HomePage.html
+++ b/All Pages/HomePage.html
@@ -208,14 +208,14 @@
             </div>
             <div>TVs & Projectors</div>
         </div>
-        <div>
+        <div id="laptop">
             <div>
                 <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-lt-211210-b9213f3b-5852-461b-ba4f-ac9f9830899c.jpg;maxWidth=220"
                     alt="" class="img">
             </div>
             <div>Laptops & Computers</div>
         </div>
-        <div>
+        <div id="game">
             <div>
                 <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/MMT-488954-flex-icons-vg-211210-8cf31f6f-e419-49fb-8f2d-4c00edf81e44.jpg;maxWidth=220" alt="" class="img">
             </div>
