--- a/All Pages/productPage.html
+++ b/All Pages/productPage.html
@@ -370,6 +370,28 @@
                             <!-- all the products will be appended here -->
                             <div id="appProducts"></div>
                             
+                            <!-- ///// -->
+
+                            <div id="nextPages">
+                                    <div>1 - 20 of 120 items</div>
+                                    <div id="nPages">
+                                        <div >
+                                            <span class="material-icons-outlined" id="farrw">
+                                                chevron_left
+                                            </span>
+                                        </div>
+                                        <div class="nu1">1</div>
+                                        <div class="nu">2</div>
+                                        <div class="nu">3</div>
+                                        <div class="dots">...</div>
+                                        <div class="nu">6</div>
+                                        <div >
+                                            <span class="material-icons-outlined" id="barrw">
+                                                chevron_right
+                                            </span>
+                                        </div>
+                                    </div>
+                            </div>
             
 
                         </div>
