--- a/All Pages/productPage.html
+++ b/All Pages/productPage.html
@@ -224,6 +224,14 @@
                                             $500 - $1249.99
                                         </div>
                                     </div>
+                                    <div class="fDiv">
+                                        <div>
+                                            <input type="checkBox" class="check">
+                                        </div>
+                                        <div class="priceText">
+                                            $1250 - $1999.99
+                                        </div>
+                                    </div>
 
                             </div>
 
