done for the day of 14-12

--- a/All Pages/productDescPage.html
+++ b/All Pages/productDescPage.html
@@ -355,7 +355,7 @@
                             </div>
                     </div>
 
-                    <div class="line"></div>
+                    <div class="linee"></div>
                  </div>
                 </div>
 
@@ -500,6 +500,12 @@
 
         </div>
 
+    </div>
+
+    <div class="line" id="l"></div>
+    <div id="specDiv">
+        <div id="hedSpe">Specifications</div>
+        
     </div>
 
 
