--- a/All Pages/productDescPage.html
+++ b/All Pages/productDescPage.html
@@ -505,6 +505,72 @@
     <div class="line" id="l"></div>
     <div id="specDiv">
         <div id="hedSpe">Specifications</div>
+
+            <details class="noT">
+                <summary id="fKS" class="SD">
+                   <div class="KS">Key Specs</div>
+                   <div>
+                    <div class="material-icons-outlined Sexp">
+                        expand_more
+                    </div>
+                   </div>
+                </summary>
+
+                <div id="empty"></div>
+
+            </details>
+            <details class="noT">
+                <summary id="fKS" class="SD">
+                    <div class="KS">General</div>
+                    <div>
+                        <div class="material-icons-outlined Sexp">
+                            expand_more
+                        </div>
+                    </div>
+                </summary>
+
+                <div id="empty"></div>
+
+            </details>
+            <details class="noT">
+                <summary id="fKS" class="SD">
+                    <div class="KS">Dimension</div>
+                    <div>
+                        <div class="material-icons-outlined Sexp">
+                            expand_more
+                        </div>
+                    </div>
+                </summary>
+
+                <div id="empty"></div>
+
+            </details>
+            <details class="noT">
+                <summary id="fKS" class="SD">
+                    <div class="KS">Display</div>
+                    <div>
+                        <div class="material-icons-outlined Sexp">
+                            expand_more
+                        </div>
+                    </div>
+                </summary>
+
+                <div id="empty"></div>
+
+            </details>
+            <details class="noT">
+                <summary id="fKS" class="SD">
+                    <div class="KS">Feature</div>
+                    <div>
+                        <div class="material-icons-outlined Sexp">
+                            expand_more
+                        </div>
+                    </div>
+                </summary>
+
+                <div id="empty"></div>
+
+            </details>
         
     </div>
 
