discount sorting done

--- a/All Pages/productPage.html
+++ b/All Pages/productPage.html
@@ -219,7 +219,7 @@
                                     </div>
                                     <div class="fDiv">
                                         <div>
-                                            <input type="checkBox" class="check">
+                                            <input type="checkBox" class="check" id="thirdPC">
                                         </div>
                                         <div class="priceText">
                                             $1250 - $1999.99
@@ -229,38 +229,38 @@
                             </div>
 
                             <div id="priceSortDiv">
-                                <div id="price">Discount</div>
+                                <div id="price">Discount </div>
                             
                                 <div class="fDiv">
                                     <div>
-                                        <input type="checkBox" class="check">
+                                        <input type="checkBox" class="check" id="tPM">
                                     </div>
                                     <div class="priceText">
-                                        20% off or More
+                                        21% to 40%
                                     </div>
                                 </div>
                                 <div class="fDiv">
                                     <div>
-                                        <input type="checkBox" class="check">
+                                        <input type="checkBox" class="check" id="twentyOM">
                                     </div>
                                     <div class="priceText">
-                                        30% off or More
+                                        14% to 20%
                                     </div>
                                 </div>
                                 <div class="fDiv">
                                     <div>
-                                        <input type="checkBox" class="check">
+                                        <input type="checkBox" class="check" id="tenTOT">
                                     </div>
                                     <div class="priceText">
-                                        40% off or More
+                                        11% to 13%
                                     </div>
                                 </div>
                                 <div class="fDiv">
                                     <div>
-                                        <input type="checkBox" class="check">
+                                        <input type="checkBox" class="check" id="ZTN">
                                     </div>
                                     <div class="priceText">
-                                       50% off or More
+                                       0% to 10%
                                     </div>
                                 </div>
                             </div>
