--- a/All Pages/HomePage.html
+++ b/All Pages/HomePage.html
@@ -153,7 +153,14 @@
             <div id="signIn">Sign In</div>
             <div id="cA"> Create Account</div>
     </div>
-    <div id="savedItemsPopUp"></div>
+
+<!-- saveItemsDIv -->
+    <div id="savedItemsPopUp">
+        <div id="appSI">
+            
+        </div>
+
+    </div>
 
     <!-- navBar// -->
     
