half search funct done

--- a/All Pages/HomePage.html
+++ b/All Pages/HomePage.html
@@ -111,8 +111,11 @@
     <div id="extend"></div>
     <div id="Support"></div>
     
+    <!-- searchRes -->
     <div id="searchRes">
-
+        <!-- <div id="emp"></div>
+        <div id="emp"></div>
+        <div id="emp"></div> -->
     </div>
 
     <div id="navBar2">
