--- a/All Pages/productPage.html
+++ b/All Pages/productPage.html
@@ -491,8 +491,8 @@
                                    <div id="sortBy">
                                        <select  id="sel">
                                             <option value="feat" >Select</option>
-                                            <option value="LTH">Low To High</option>
-                                            <option value="HTL"  >High To Low</option>
+                                            <option value="LTH">Price: Low To High</option>
+                                            <option value="HTL"  > Price: High To Low</option>
                                             
                                         </select>
                                    </div>
