--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Buy | Official Online Store</title>
-    <link rel="stylesheet" href="/Styles/HomePage.css">
+    <link rel="stylesheet" href="./Styles/HomePage.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
     <link rel="shortcut icon" type="image/jpg"
         href="https://www.freepnglogos.com/uploads/best-buy-png-logo/logos-quiz-answers-level-png-logo-30.png" /> 
@@ -758,4 +758,4 @@
 
 </body>
 </html>
-<script src="/JS Files/HomePage.js"></script>
+<script src="./JS Files/HomePage.js"></script>
